Add Python scripting
This commit introduces Python scripting in addition to
ImageMath. The integration uses GraalPy and has optional
support for a venv.

The integration makes ImageMath function available to
Python script and offers optimized data access when
Numpy and PyArrow are installed.

This feature makes it possible to perform much richer
analysis of data, use control structures (loops, conds,
...) and external Python libraries.